Added ckafprod submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/Csharp-Consumers"]
 	path = submodules/Csharp-Consumers
 	url = https://github.com/Cordsenboyz/Csharp-Consumers.git
+[submodule "ckafprod"]
+	path = ckafprod
+	url = https://github.com/kivkiv12345/ckafprod.git
